{
    "name": "Player",
    "maps": [
        {
            "name": "Player",
            "id": "9afff60f-433b-4959-a763-8d367e6e05e0",
            "actions": [
                {
                    "name": "cast_spell_1",
                    "type": "Button",
                    "id": "aa6bb5eb-a5b0-49ba-9e2f-7d851b43ced5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cast_spell_2",
                    "type": "Button",
                    "id": "09d4afa6-c06e-4964-8746-3ca01b062020",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "roll_dice",
                    "type": "Button",
                    "id": "0138c207-822a-4fa5-800c-653b944c114c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "up",
                    "type": "Button",
                    "id": "74d74cba-0e4a-4ee3-b7eb-94006d764821",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "down",
                    "type": "Button",
                    "id": "9a41b646-353e-4464-b465-4107ee7a30bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "left",
                    "type": "Button",
                    "id": "14c2d8e2-5dce-426a-a7a0-caaced02246e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "right",
                    "type": "Button",
                    "id": "12dccfa4-756c-4d30-8ab3-3597bef5a328",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "pick_up",
                    "type": "Button",
                    "id": "0ab4ff4b-3261-4cf2-b241-7db8d578dac2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "7aa11f86-88f2-4018-8bd8-52c84390641a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "416267f0-9a9e-4e5a-aee4-9fc5e1f1a1ac",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "cast_spell_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "364808df-5a94-4611-9497-fc76ec4cf4ba",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cast_spell_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca8d4990-adee-4409-9d8f-34938dcc8fe4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "roll_dice",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5a4dd13-ff24-4e3b-a243-03a65cf24122",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5054de2-85b3-4ecf-a9fb-8ca9032a0919",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83c98e1b-b2c7-412d-ade8-a8ff02a369ec",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "111295db-fb61-45a1-aecb-b74d22331ae6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32e599df-e6f8-43fe-ad01-946f17fce06a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pick_up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ac5be77-a3f7-4cfa-8be7-c0e3dd2bfb39",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DiceChoose",
            "id": "9fa2e8c8-b044-4f1f-a224-c0587f496423",
            "actions": [
                {
                    "name": "confirm",
                    "type": "Button",
                    "id": "0ae30314-08ef-4cee-b702-7fe41cba24d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "820b9e6d-f6c7-4cf4-8bf1-a556ed6fb96f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}